fixed privacy option spacing

--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -46,6 +46,10 @@ form {
   margin-top: 1em;
 }
 
+.radio {
+  grid-column: 1 / 3;
+}
+
 .formButton {
   border-radius: 10px;
   border: none;
